# veros

./: .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  _version.py  base.dockerfile  codecov.yml  conda-environment.yml  conftest.py  cuda_ext.py  decorators.py  environment-unix.yml  environment-windows.yml  environment.yml  meta.yaml  pyproject.toml  requirements.txt  requirements_jax.txt  run_benchmarks.py  setup.cfg  setup.py  testing.dockerfile  time.py  variables.py  veros.py  veros_legacy.py  versioneer.py
.github/: dependabot.yml
benchmarks/: acc2_benchmark.py  acc2_ns_benchmark.py  acc_benchmark.py  bench-external-assets.json  benchmark_base.py  external_mode_solver_benchmark.py  isoneutral_benchmark.py  pressure_solver_benchmark.py  streamfunction_benchmark.py  streamfunction_solver_benchmark.py  tdma_benchmark.py
cli/: veros_copy_setup.py
climate/: __init__.py  slice.py  timer.py  tools.py
core/: atmospherefluxes.py  cyclic.py  diffusion.py  eke.py  momentum.py  npzd.py  npzd.py.old  thermodynamics.py  utilities.py
diagnostics/: averages.py  cfl_monitor.py  diagnostic.py  npzd.py  snapshot.py
doc/: Makefile  assets.json  conf.py  docutils.conf  faq.rst  index.rst  introduction.rst  plot_benchmarks.py  quickstart.rst  requirements.txt  settings.rst  usage.rst  variables.rst
docs/: Makefile  conf.py  requirements.txt
solver-tuning/: petsc_tuner.sh
test/: cli.py  cli_test.py  conftest.py  distributed_test.py  (+8 more)
(+578 files in other folders)
