[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = veros/_version.py
versionfile_build = veros/_version.py
tag_prefix = v

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

exclude = __init__.py
ignore =
    # Comments
    E26,
    # Lines starting with binary operators
    W503,
max-line-length = 120
