[metadata]
description-file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = veros/_version.py
versionfile_build = veros/_version.py
tag_prefix = v

[flake8]
exclude = __init__.py
ignore =
    # Comments
    E26,
    # Lines starting with binary operators
    W503,
max-line-length = 120

[tool:pytest]
addopts = --forked --numprocesses auto
