[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = veros/_version.py
versionfile_build = veros/_version.py
tag_prefix = v

[flake8]
exclude = veros/tools/filelock.py
max-line-length = 120
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[tool:pytest]
testpaths = test
addopts = --forked
